// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionSheet.Footer/> should render correctly with horizontal 1`] = `
<div
  aria-label="horizontal footer"
  class="quill-action-sheet--footer quill-action-sheet--footer__variant--horizontal"
>
  <button>
    action
  </button>
</div>
`;

exports[`<ActionSheet.Footer/> should render correctly with vertical 1`] = `
<div
  aria-label="vertical footer"
  class="quill-action-sheet--footer quill-action-sheet--footer__variant--vertical"
>
  <button>
    action
  </button>
</div>
`;
